fix : 문의하기-이메일 수정, string 적용

--- a/app/src/main/res/layout/activity_inquiry.xml
+++ b/app/src/main/res/layout/activity_inquiry.xml
@@ -19,7 +19,7 @@
         android:id="@+id/check_title"
         android:layout_width="wrap_content"
         android:layout_height="22dp"
-        android:text="문의하기"
+        android:text="@string/user_inquiry"
         android:textSize="18sp"
         android:fontFamily="@font/pretendard_bold"
         android:textColor="@color/black"
@@ -71,7 +71,7 @@
         android:id="@+id/check_text3_tv"
         android:layout_width="wrap_content"
         android:layout_height="18dp"
-        android:text="conet.official23@gmail.com"
+        android:text="@string/conet_email"
         android:textSize="14sp"
         android:fontFamily="@font/pretendard"
         android:textColor="@color/gray500"
