--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cl_user">
+    android:id="@+id/cl_user"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/tv_user_title"
@@ -88,41 +89,41 @@
     </androidx.cardview.widget.CardView>
 
     <!--알림 설정-->
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cv_user_alert"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="24dp"
-        app:cardElevation="0dp"
-        app:layout_constraintTop_toBottomOf="@id/cv_user_info">
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:id="@+id/cv_user_alert"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginHorizontal="24dp"-->
+<!--        android:layout_marginTop="24dp"-->
+<!--        app:cardElevation="0dp"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/cv_user_info">-->
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent">-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:text="알림 설정"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:fontFamily="@font/pretendard_regular"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="20dp"-->
+<!--                android:text="알림 설정"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textSize="16sp"-->
+<!--                android:fontFamily="@font/pretendard_regular"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"/>-->
 
-            <Switch
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:track="@drawable/switch_track_selector"
-                android:thumb="@drawable/switch_thumb" />
+<!--            <Switch-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                android:track="@drawable/switch_track_selector"-->
+<!--                android:thumb="@drawable/switch_thumb" />-->
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
+<!--    </androidx.cardview.widget.CardView>-->
 
     <View
         android:id="@+id/v_user_line_2"
@@ -134,7 +135,7 @@
         android:background="@color/gray100"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cv_user_alert"/>
+        app:layout_constraintTop_toBottomOf="@id/cv_user_info"/>
 
     <!--공지사항-->
     <androidx.cardview.widget.CardView
@@ -211,18 +212,41 @@
     </androidx.cardview.widget.CardView>
 
     <!--이용약관-->
-    <TextView
-        android:id="@+id/tv_user_terms"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:text="이용약관"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:fontFamily="@font/pretendard_regular"
-        android:layout_marginTop="24dp"
-        android:layout_marginStart="24dp"
-        app:layout_constraintTop_toBottomOf="@id/cv_user_inquiry"
-        app:layout_constraintStart_toStartOf="parent"/>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_user_terms"
+        android:layout_width="match_parent"
+        android:layout_height="24dp"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="26dp"
+        app:cardElevation="0dp"
+        app:layout_constraintTop_toBottomOf="@id/cv_user_inquiry">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:text="이용약관"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:fontFamily="@font/pretendard_regular"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <ImageView
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:src="@drawable/chevron_right"
+                app:tint="@color/gray200"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
     <View
         android:id="@+id/my_line3_v"
@@ -234,7 +258,7 @@
         android:background="@color/gray100"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_user_terms"/>
+        app:layout_constraintTop_toBottomOf="@id/cv_user_terms"/>
 
     <!--로그아웃-->
     <TextView
