--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/tv_info_title"
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
-                android:text="회원정보"
+                android:text="@string/user_info"
                 android:textSize="18sp"
                 android:fontFamily="@font/pretendard_bold"
                 android:textColor="@color/black"
