--- a/app/src/main/res/layout/activity_inquiry.xml
+++ b/app/src/main/res/layout/activity_inquiry.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <!--check-->
     <ImageView
-        android:id="@+id/check_btn_back_iv"
+        android:id="@+id/iv_inquiry_back_btn"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:src="@drawable/chevron_left"
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
-        android:id="@+id/check_title"
+        android:id="@+id/tv_inquiry_title"
         android:layout_width="wrap_content"
         android:layout_height="22dp"
         android:text="@string/user_inquiry"
@@ -25,11 +25,11 @@
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/check_btn_back_iv"
-        app:layout_constraintBottom_toBottomOf="@id/check_btn_back_iv"/>
+        app:layout_constraintTop_toTopOf="@id/iv_inquiry_back_btn"
+        app:layout_constraintBottom_toBottomOf="@id/iv_inquiry_back_btn"/>
 
     <TextView
-        android:id="@+id/check_subtitle"
+        android:id="@+id/tv_inquiry_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="26dp"
         android:text="무엇을 도와드릴까요?"
@@ -38,11 +38,11 @@
         android:textColor="@color/gray800"
         android:layout_marginStart="24dp"
         android:layout_marginTop="56dp"
-        app:layout_constraintTop_toBottomOf="@id/check_title"
+        app:layout_constraintTop_toBottomOf="@id/tv_inquiry_title"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
-        android:id="@+id/check_text1_tv"
+        android:id="@+id/tv_inquiry_text_1"
         android:layout_width="wrap_content"
         android:layout_height="18dp"
         android:text="이용 중 불편한 점이나 문의사항을 보내주세요."
@@ -51,11 +51,11 @@
         android:textColor="@color/gray500"
         android:layout_marginTop="16dp"
         android:layout_marginStart="24dp"
-        app:layout_constraintTop_toBottomOf="@id/check_subtitle"
+        app:layout_constraintTop_toBottomOf="@id/tv_inquiry_subtitle"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
-        android:id="@+id/check_text2_tv"
+        android:id="@+id/tv_inquiry_text_2"
         android:layout_width="wrap_content"
         android:layout_height="18dp"
         android:text="평일 (월-금) 10:00 - 17:00, 주말/공휴일 휴무"
@@ -64,11 +64,11 @@
         android:textColor="@color/gray500"
         android:layout_marginStart="24dp"
         android:layout_marginTop="2dp"
-        app:layout_constraintTop_toBottomOf="@id/check_text1_tv"
+        app:layout_constraintTop_toBottomOf="@id/tv_inquiry_text_1"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
-        android:id="@+id/check_text3_tv"
+        android:id="@+id/tv_inquiry_text_3"
         android:layout_width="wrap_content"
         android:layout_height="18dp"
         android:text="@string/conet_email"
@@ -77,28 +77,28 @@
         android:textColor="@color/gray500"
         android:layout_marginStart="24dp"
         android:layout_marginTop="2dp"
-        app:layout_constraintTop_toBottomOf="@id/check_text2_tv"
+        app:layout_constraintTop_toBottomOf="@id/tv_inquiry_text_2"
         app:layout_constraintStart_toStartOf="parent"/>
     
     <View
-        android:id="@+id/check_email_btn"
+        android:id="@+id/v_inquiry_email_btn"
         android:layout_width="137dp"
         android:layout_height="40dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/view_btn_purple"
-        app:layout_constraintTop_toBottomOf="@id/check_text3_tv"
+        app:layout_constraintTop_toBottomOf="@id/tv_inquiry_text_3"
         app:layout_constraintStart_toStartOf="parent"/>
     
     <ImageView
-        android:id="@+id/check_email_iv"
+        android:id="@+id/iv_inquiry_email_btn"
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:src="@drawable/mail"
         android:layout_marginStart="20dp"
-        app:layout_constraintStart_toStartOf="@id/check_email_btn"
-        app:layout_constraintTop_toTopOf="@id/check_email_btn"
-        app:layout_constraintBottom_toBottomOf="@id/check_email_btn"/>
+        app:layout_constraintStart_toStartOf="@id/v_inquiry_email_btn"
+        app:layout_constraintTop_toTopOf="@id/v_inquiry_email_btn"
+        app:layout_constraintBottom_toBottomOf="@id/v_inquiry_email_btn"/>
     
     <TextView
         android:layout_width="wrap_content"
@@ -108,18 +108,18 @@
         android:textSize="14sp"
         android:layout_marginStart="6dp"
         android:textColor="@color/gray800"
-        app:layout_constraintStart_toEndOf="@id/check_email_iv"
-        app:layout_constraintTop_toTopOf="@id/check_email_btn"
-        app:layout_constraintBottom_toBottomOf="@id/check_email_btn"/>
+        app:layout_constraintStart_toEndOf="@id/iv_inquiry_email_btn"
+        app:layout_constraintTop_toTopOf="@id/v_inquiry_email_btn"
+        app:layout_constraintBottom_toBottomOf="@id/v_inquiry_email_btn"/>
 
     <View
-        android:id="@+id/check_view"
+        android:id="@+id/v_inquiry_line"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginHorizontal="24dp"
         android:background="@color/gray200"
         android:layout_marginTop="61dp"
-        app:layout_constraintTop_toBottomOf="@id/check_email_btn"
+        app:layout_constraintTop_toBottomOf="@id/v_inquiry_email_btn"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
@@ -131,7 +131,7 @@
         android:textColor="@color/gray500"
         android:layout_marginTop="16dp"
         android:layout_marginStart="24dp"
-        app:layout_constraintTop_toBottomOf="@id/check_view"
+        app:layout_constraintTop_toBottomOf="@id/v_inquiry_line"
         app:layout_constraintStart_toStartOf="parent"/>
 
 
