--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <!--notice-->
     <ImageView
-        android:id="@+id/notice_btn_back_iv"
+        android:id="@+id/iv_notice_back_btn"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:src="@drawable/chevron_left"
@@ -16,17 +16,17 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
-        android:id="@+id/notice_text1_tv"
+        android:id="@+id/tv_notice_text_1"
         android:layout_width="wrap_content"
         android:layout_height="22dp"
-        android:text="공지사항"
+        android:text="@string/user_notice"
         android:textSize="18sp"
         android:fontFamily="@font/pretendard_bold"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/notice_btn_back_iv"
-        app:layout_constraintBottom_toBottomOf="@id/notice_btn_back_iv"/>
+        app:layout_constraintTop_toTopOf="@id/iv_notice_back_btn"
+        app:layout_constraintBottom_toBottomOf="@id/iv_notice_back_btn"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -37,7 +37,7 @@
         android:textColor="@color/gray500"
         android:layout_marginTop="46dp"
         android:layout_marginStart="24dp"
-        app:layout_constraintTop_toBottomOf="@id/notice_text1_tv"
+        app:layout_constraintTop_toBottomOf="@id/tv_notice_text_1"
         app:layout_constraintStart_toStartOf="parent"/>
 
 
