--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -41,7 +41,7 @@
                 android:id="@+id/info_photo_iv"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/profile_gray"
+                android:src="@drawable/icon_profile_gray"
                 android:layout_marginTop="56dp"
                 app:layout_constraintTop_toBottomOf="@id/info_text1"
                 app:layout_constraintStart_toStartOf="parent"
