--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -21,7 +21,7 @@
         android:id="@+id/my_profile_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/profile_gray"
+        android:src="@drawable/icon_profile_gray"
         android:layout_marginTop="32dp"
         android:layout_marginStart="24dp"
         app:layout_constraintTop_toBottomOf="@id/my_1_tv"
