--- a/app/src/main/res/layout/fragment_sidebar.xml
+++ b/app/src/main/res/layout/fragment_sidebar.xml
@@ -20,7 +20,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginTop="28dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"
             android:src="@drawable/icon_close"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -29,7 +29,7 @@
             android:id="@+id/tv_sidebar_group_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="18dp"
+            android:layout_marginStart="18dp"
             android:layout_marginTop="27dp"
             android:fontFamily="@font/pretendard_bold"
             android:textColor="@color/grayBlack"
@@ -60,7 +60,7 @@
             android:id="@+id/tv_sidebar_group_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
             android:fontFamily="@font/pretendard_medium"
             android:text="n명"
             android:textColor="@color/gray500"
@@ -90,7 +90,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="6dp"
+                android:layout_marginStart="6dp"
                 android:fontFamily="@font/pretendard_medium"
                 android:text="@string/invite_code_issue"
                 android:textColor="@color/texthigh"
