Refactor : 파일 이동에 따른 변경

--- a/app/src/main/res/layout/activity_detail_past.xml
+++ b/app/src/main/res/layout/activity_detail_past.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grayWhite"
-    tools:context=".UI.Plan.DetailPastActivity">
+    tools:context=".UI.Plan.delete.DetailPastActivity">
 
     <ScrollView
         android:layout_width="match_parent"
